@@ -1,3 +1,10 @@
+2002-01-11  Akinori Ito <aito@fw.ipsj.or.jp>
+
+	* [w3m-dev 02819]
+	* regex.c (RegexMatch): loop condition changed (from < to <= )
+	* regex.c (regmatch_iter): end condition changed (from >= to >)
+	* search.c (forwardSearch): next search fix
+
 2002-01-11  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02818]
@@ -1842,4 +1849,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.206 2002/01/10 16:11:32 ukai Exp $
+$Id: ChangeLog,v 1.207 2002/01/11 02:24:13 a-ito Exp $
